tests/pure/mutable_declaration.sy
start :: pu do
    a := 1
end

// error: Cannot make mutable declarations in pure functions
